migrate settings from macbook pro 13

--- a/files/.config/kitty/kitty.conf
+++ b/files/.config/kitty/kitty.conf
@@ -8,10 +8,10 @@
 # bold_font        Operator Mono Bold
 # italic_font      Operator Mono Italic
 # bold_italic_font Operator Mono Book
-font_family      PragmataPro Mono Regular
-bold_font        PragmataPro Mono Bold
-italic_font      PragmataPro Mono Italic
-bold_italic_font PragmataPro Mono Bold Italic
+font_family      PragmataPro Regular
+bold_font        PragmataPro Bold
+italic_font      PragmataPro Italic
+bold_italic_font PragmataPro Bold Italic
 #
 # bold_font Operator Mono Thick
 # bold_italic_font Operator Mono Medium
@@ -45,7 +45,7 @@ adjust_column_height 2
 # }}}
 
 # Font size (in pts)
-font_size        16
+font_size        15
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 # font_size_delta 1
