add .dir_colors & migrate neovim to lua

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,89 +1,86 @@
-setw -g automatic-rename on # each new buffer in the same directory
-# set-option -g visual-activity off
-# set-option -g visual-bell off
-# set-option -g visual-silence off
-# set-window-option -g monitor-activity off
-# set-option -g bell-action none
-## set -g escape-time 10
-set -sg escape-time 0 # Eliminates delay in VIM when switch from insert to normal mode
-set -g default-terminal "tmux-256color"
-set -g mouse on
-set -g exit-unattached off
-set -g base-index 1
-set -g pane-base-index 1
-
+# Set prefix to Alt-j
 unbind C-b
-unbind r
 set -g prefix M-j
-bind r source-file ~/.tmux.conf \; display-message "Config reloaded."
+bind r source-file ~/.tmux.conf \; display "config reloaded!"
 
-bind '%' split-window -h -c '#{pane_current_path}'  # Split panes horizontal
-bind '"' split-window -v -c '#{pane_current_path}'  # Split panes vertically
+# Panes open in same dir
+bind '%' split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
-bind c new-window -c '#{pane_current_path}' # Create new window
-
-bind Down resize-pane -D 10
-bind Up resize-pane -U 10
-bind Right resize-pane -L 10
-bind Left resize-pane -R 10
-
-# bind -r h select-pane -L
-# bind -r j select-pane -D
-# bind -r k select-pane -U
-# bind -r l select-pane -R
-
-bind j select-pane -D 
+# Quick pane move
+bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -L
 bind h select-pane -R
 
-# copy & paste with reattach-to-user-namespace
+# Resize panes faster
+bind -r Down resize-pane -D 10
+bind -r Up resize-pane -U 10
+bind -r Right resize-pane -R 10
+bind -r Left resize-pane -L 10
+
+# Modern terminal & mouse
 set -g default-shell /bin/zsh
+set -g default-terminal "tmux-256color"
+set -as terminal-overrides ",xterm-256color:Tc"
+set -g mouse on
+set -sg escape-time 0
+set -g focus-events on
+set -g exit-unattached off
 
-set -g status-position bottom
+# Indexing starts at 1
+set -g base-index 1
+set -g pane-base-index 1
 
-set -g status-fg colour20
-set -g status-bg colour18
+# Force theme bg match (Kitty etc)
+# set -g window-style 'bg=#1e1e2e'
+# set -g window-active-style 'bg=#1e1e2e'
 
-set -g status-left-length 150
-set -g status-right-length 100
+# Pane borders subtle
+# set -g pane-border-style "fg=#2c2e3e"
+# set -g pane-active-border-style "fg=#6b7089"
 
-set -g status-left "[#[fg=colour06,nobold] #S #[fg=colour07]]"
-set -g window-status-format " #I:#W "
-set -g window-status-current-format "#[fg=colour07] #I*#W "
-set -g status-right "[ %b%e ]"
+# STATUS BAR VIBES 🔥
+set -g status-position top
+set -g status-justify centre
 
-set -g status-justify centre # Window status alignment
-set -g display-panes-colour default # Pane number indicator
-set -g display-panes-active-colour default
-set -g clock-mode-colour colour04 # Clock mode
-set -g clock-mode-style 12
-set -g message-style bg=colour13,fg=colour18 # Message
-set -g message-command-style  bg=colour13,fg=colour18 # Command message
-set -g mode-style bg=colour13,fg=colour18
-
-set -g pane-active-border-style bg=colour18,fg=colour4
-set -g pane-border-style fg=colour18,bg=colour18
-
-set -g status-style "bg=#1e2132"
-set -g window-style ""
-set -g window-active-style ""
-
-set -g status-left " [#[fg=#c6c8d1]#S] #[fg=#6b7089]#{client_width}x#{client_height}"
-set -g status-left-style ""
 set -g status-left-length 50
 
-set -g status-right "%a %d %b #[fg=#c6c8d1]%R %Z "
-set -g status-right-style "fg=#6b7089"
-set -g status-right-length 25
+set -g status-right-length 50
+# set -g status-right " #[fg=#6b7089]%a %d %b #[fg=#a6accd]%R  "
 
-set -g window-status-current-style "bold"
-set -g window-status-style "fg=#6b7089"
-set -g window-status-format " #[fg=#c6c8d1]#I:#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-set -g window-status-current-format " #[fg=#c6c8d1]#I:#{?#{==:#W,fish},#{b:pane_current_path},#W}#F "
-set -g window-status-separator ""
+# Inactive tabs (dim)
+# set -g window-status-style "fg=#5c5f77,bg=#1e1e2e"
 
-set -g pane-active-border-style "fg=#6b7089"
-set -g pane-border-style "fg=#6b7089"
-set -g default-terminal "term-256color"
-set -g focus-events on
+# Active tab (bright)
+# set -g window-status-current-style "fg=#a6accd,bg=#1e1e2e,bold"
+
+# Tab text format
+# set -g window-status-format " #[fg=#5c5f77]#I:#W "
+# set -g window-status-current-format " #[fg=#a6accd]#I:#W "
+
+# Remove noisy separator
+set -g window-status-separator " "
+
+# Active pane = normal bg, Inactive pane = darker overlay
+# set -g window-active-style 'bg=#1e1e2e'
+# set -g window-style 'bg=#1a1b26'  # slightly darker
+
+setw -g automatic-rename on
+# setw -g automatic-rename-format "#{pane_current_command}:#{pane_current_path}"
+setw -g automatic-rename-format "#{pane_current_command}"
+set -g status-left-length 20
+set -g status-right-length 20
+set -g status-left '#[fg=black] #S #[fg=blue]| #[fg=black]#I:#W'
+set -g status-right ''
+set -g status-interval 5
+set -g status-bg "grey"
+set -g status-fg "black"
+set -g @plugin 'leighmcculloch/tmux-colours-superhero'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+run '~/.tmux/plugins/tpm/tpm'
+set -g @urlview-key 'x'
+# Bright/thick-looking colors
+set -g pane-border-style 'fg=brightblack'
+set -g pane-active-border-style 'fg=brightmagenta'
