upload nvim, wezterm, tmux and new fonts

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,86 +1,145 @@
-# Set prefix to Alt-j
+# -- HotKeys --
 unbind C-b
 set -g prefix M-j
 bind r source-file ~/.tmux.conf \; display "config reloaded!"
 
-# Panes open in same dir
+set -g status on
+
+# -- Open Panes
 bind '%' split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
-# Quick pane move
+# ─── True 1-bit (no gray fallback) ───────────────────────
+# use ANSI colour0 (black) and colour15 (white) only
+set -g escape-time 0
+
+# ─── Disable bell/flags/noise ────────────────────────────
+set -g monitor-activity off
+setw -g window-status-activity-style none
+
+# Pane move
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -L
 bind h select-pane -R
 
-# Resize panes faster
+# Panes Resize
 bind -r Down resize-pane -D 10
 bind -r Up resize-pane -U 10
 bind -r Right resize-pane -R 10
 bind -r Left resize-pane -L 10
 
+# -- HotKeys --
+
+# -- Copy paste --
+# set -g allow-paste on 
+set -g mouse on # enable mouse support
+setw -g mode-keys vi # use vim-style nav in copy mode
+
+# Clipboard copy logic
+if-shell 'uname | grep -qi Darwin' 'set-option -g set-clipboard on' \
+'if-shell "uname -r | grep -qi microsoft" \
+  "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"win32yank.exe -i --crlf\"" \
+  "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"xclip -sel clip -i\""
+'
+
+# set-option -g set-clipboard on # enable OSC 52 to system clipboard
+
+# bind -T copy-mode-vi y send -X copy-selection-and-cancel  # y to yank in copy mode (sends to system clipboard via OSC 52)
+
+# fallback key: prefix + y to copy last selected text to clipboard
+# copy - zsh function that uses different api based on the machine
+# bind-key y run-shell "tmux show-buffer | tmux load-buffer - && tmux save-buffer - | copy"
+
+# set -g terminal-features 'wezterm:RGB,paste:bracketed'
+set -as terminal-features ',xterm-256color:RGB'
+
 # Modern terminal & mouse
+
+# -- Gui
 set -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
-set -g mouse on
 set -sg escape-time 0
 set -g focus-events on
 set -g exit-unattached off
+
+# -- Tabs
 
 # Indexing starts at 1
 set -g base-index 1
 set -g pane-base-index 1
 
-# Force theme bg match (Kitty etc)
-# set -g window-style 'bg=#1e1e2e'
-# set -g window-active-style 'bg=#1e1e2e'
+# -- Gui
 
-# Pane borders subtle
-# set -g pane-border-style "fg=#2c2e3e"
-# set -g pane-active-border-style "fg=#6b7089"
+set -g window-style          'bg=default,fg=default'   # use terminal bg
+set -g window-active-style   'bg=default,fg=default'
 
-# STATUS BAR VIBES 🔥
-set -g status-position top
-set -g status-justify centre
-
-set -g status-left-length 50
-
-set -g status-right-length 50
-# set -g status-right " #[fg=#6b7089]%a %d %b #[fg=#a6accd]%R  "
-
-# Inactive tabs (dim)
-# set -g window-status-style "fg=#5c5f77,bg=#1e1e2e"
-
-# Active tab (bright)
-# set -g window-status-current-style "fg=#a6accd,bg=#1e1e2e,bold"
-
-# Tab text format
-# set -g window-status-format " #[fg=#5c5f77]#I:#W "
-# set -g window-status-current-format " #[fg=#a6accd]#I:#W "
-
-# Remove noisy separator
-set -g window-status-separator " "
-
-# Active pane = normal bg, Inactive pane = darker overlay
-# set -g window-active-style 'bg=#1e1e2e'
-# set -g window-style 'bg=#1a1b26'  # slightly darker
-
-setw -g automatic-rename on
-# setw -g automatic-rename-format "#{pane_current_command}:#{pane_current_path}"
-setw -g automatic-rename-format "#{pane_current_command}"
-set -g status-left-length 20
-set -g status-right-length 20
-set -g status-left '#[fg=black] #S #[fg=blue]| #[fg=black]#I:#W'
-set -g status-right ''
+# -- Status bar style
 set -g status-interval 5
-set -g status-bg "grey"
-set -g status-fg "black"
-set -g @plugin 'leighmcculloch/tmux-colours-superhero'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g status-position top
+set -g status-left-length 50
+set -g status-right-length 50
+set -g status-justify left
+set -g status-bg default
+set -g status-fg default
+set -g status-style "bg=default,fg=default"
+
+# -- status left
+
+set -g status-left "[ - #S - ] "
+set -g status-right ""
+set -g status-left-length 50
+set -g status-right-length 0
+
+# -- status right
+
+set -g status-right ''
+# -- seprator
+
+set -g window-status-separator ""
+
+# -- Active tab 
+set -g status-style bg=default
+
+set-window-option -g window-status-current-style "bg=colour15,fg=colour0,bold"
+set-window-option -g window-status-current-format "[ #I*#W ] "
+
+# -- Inactive tab (bright)
+set-window-option -g window-status-style "bg=colour15,fg=colour0"
+set-window-option -g window-status-format "[ #I #W ] "
+
+# Inactive window
+# set -g window-active-style 'bg=#1e1e2e'
+
+set -g automatic-rename off
+set -g allow-rename off
+
+# set -g @plugin 'tmux-plugins/tmux-urlview'
+# run '~/.tmux/plugins/tpm/tpm'
+# set -g @urlview-key 'x'
+
+
+# Switching sesions
+
+set -g message-style "bg=colour15,fg=colour0"
+set -g mode-style "bg=colour15,fg=colour0,bold,reverse"
+
+# Plugins
+
+if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
+  'run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"'
+
+# Plugin manager
+set -g @plugin 'tmux-plugins/tpm'
+
+# Quick window
+set -g @plugin 'lloydbond/tmux-floating-terminal'
+set -g @floating_scratch_term 'M-i'
+set -g @floating_scratch_to_active_win 'M-h'
+set -g @floating_scratch_to_win 'M-l'
+set -g @floating_active_pane_to_scratch 'M-m'
+
+# Load Plugins
 run '~/.tmux/plugins/tpm/tpm'
-set -g @urlview-key 'x'
-# Bright/thick-looking colors
-set -g pane-border-style 'fg=brightblack'
-set -g pane-active-border-style 'fg=brightmagenta'
