--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -133,7 +133,7 @@ if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
 
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-
+set -g @plugin 'christoomey/vim-tmux-navigator'
 # Quick window
 set -g @plugin 'lloydbond/tmux-floating-terminal'
 set -g @floating_scratch_term 'M-i'
