--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -134,6 +134,7 @@ if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
 # Quick window
 set -g @plugin 'lloydbond/tmux-floating-terminal'
 set -g @floating_scratch_term 'M-i'
@@ -143,3 +144,11 @@ set -g @floating_active_pane_to_scratch 'M-m'
 
 # Load Plugins
 run '~/.tmux/plugins/tpm/tpm'
+
+# Images support
+# set -gq allow-passthrough on
+set -g default-terminal "wezterm"            # optional but helps TERM match
+set -ga terminal-overrides ",wezterm*:allow-passthrough"
+set -g allow-passthrough on                  # use 'all' if you switch panes a lot
+set -gq allow-passthrough on
+set -g visual-activity off                   # keep your current line
