--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -53,7 +53,7 @@ if-shell 'uname | grep -qi Darwin' 'set-option -g set-clipboard on' \
 # bind-key y run-shell "tmux show-buffer | tmux load-buffer - && tmux save-buffer - | copy"
 
 # set -g terminal-features 'wezterm:RGB,paste:bracketed'
-set -as terminal-features ',xterm-256color:RGB'
+# set -as terminal-features ',xterm-256color:RGB'
 
 # Modern terminal & mouse
 
@@ -61,6 +61,7 @@ set -as terminal-features ',xterm-256color:RGB'
 set -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ",xterm-256color:Tc"
+set -as terminal-features "tmux*:RGB,tmux*:usstyle"
 set -sg escape-time 0
 set -g focus-events on
 set -g exit-unattached off
@@ -88,14 +89,13 @@ set -g status-style "bg=default,fg=default"
 
 # -- status left
 
-set -g status-left "[ - #S - ] "
-set -g status-right ""
+set -g status-left "[#S] 👾 "
 set -g status-left-length 50
 set -g status-right-length 0
+set -g status-right ''
 
 # -- status right
 
-set -g status-right ''
 # -- seprator
 
 set -g window-status-separator ""
@@ -104,11 +104,11 @@ set -g window-status-separator ""
 set -g status-style bg=default
 
 set-window-option -g window-status-current-style "bg=colour15,fg=colour0,bold"
-set-window-option -g window-status-current-format "[ #I*#W ] "
+set-window-option -g window-status-current-format "⟨▣ #I:#W⟩"
 
 # -- Inactive tab (bright)
 set-window-option -g window-status-style "bg=colour15,fg=colour0"
-set-window-option -g window-status-format "[ #I #W ] "
+set-window-option -g window-status-format "⟨▢ #I:#W⟩"
 
 # Inactive window
 # set -g window-active-style 'bg=#1e1e2e'
@@ -119,7 +119,6 @@ set -g allow-rename off
 # set -g @plugin 'tmux-plugins/tmux-urlview'
 # run '~/.tmux/plugins/tpm/tpm'
 # set -g @urlview-key 'x'
-
 
 # Switching sesions
 
@@ -134,9 +133,19 @@ if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
 # Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'lloydbond/tmux-floating-terminal'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Resurrect / Continuum
+set -g @resurrect-strategy-vim 'session'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+set -g status-interval 5
 
 # Quick window
-set -g @plugin 'lloydbond/tmux-floating-terminal'
 set -g @floating_scratch_term 'M-i'
 set -g @floating_scratch_to_active_win 'M-h'
 set -g @floating_scratch_to_win 'M-l'
