--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -72,11 +72,6 @@ set -g exit-unattached off
 set -g base-index 1
 set -g pane-base-index 1
 
-# -- Gui
-
-set -g window-style          'bg=default,fg=default'   # use terminal bg
-set -g window-active-style   'bg=default,fg=default'
-
 # -- Status bar style
 set -g status-interval 5
 set -g status-position top
@@ -86,13 +81,12 @@ set -g status-justify left
 set -g status-bg default
 set -g status-fg default
 set -g status-style "bg=default,fg=default"
-
 # -- status left
 
 set -g status-left "[#S] 👾 "
 set -g status-left-length 50
 set -g status-right-length 0
-set -g status-right ''
+set -g status-right '#(~/.tmux/current_branch.sh "#{pane_current_path}")'
 
 # -- status right
 
@@ -110,8 +104,8 @@ set-window-option -g window-status-current-format "⟨▣ #I:#W⟩"
 set-window-option -g window-status-style "bg=colour15,fg=colour0"
 set-window-option -g window-status-format "⟨▢ #I:#W⟩"
 
-# Inactive window
-# set -g window-active-style 'bg=#1e1e2e'
+set -g window-style          'bg=default,fg=white'   # use terminal bg
+set -g window-active-style   'bg=default,fg=black'
 
 set -g automatic-rename off
 set -g allow-rename off
@@ -161,3 +155,38 @@ set -ga terminal-overrides ",wezterm*:allow-passthrough"
 set -g allow-passthrough on                  # use 'all' if you switch panes a lot
 set -gq allow-passthrough on
 set -g visual-activity off                   # keep your current line
+
+# set -g status-style "bg=colour15,fg=colour0"
+
+set -g status-style               'bg=colour254,fg=black'
+set -g window-status-style        'bg=colour254,fg=black'     # inactive tabs
+# set -g window-status-current-style 'bg=colour245,fg=colour255,bold' # active tab = darker gray
+
+
+# https://chatgpt.com/c/68b6c464-872c-832b-bdbb-fee2a1ce744f
+# - gray shades:
+# colour232  #080808
+# colour233  #121212
+# colour234  #1c1c1c
+# colour235  #262626
+# colour236  #303030
+# colour237  #3a3a3a
+# colour238  #444444
+# colour239  #4e4e4e
+# colour240  #585858
+# colour241  #626262
+# colour242  #6c6c6c
+
+# colour243  #767676
+# colour244  #808080
+# colour245  #8a8a8a
+# colour246  #949494
+# colour247  #9e9e9e
+# colour248  #a8a8a8
+# colour249  #b2b2b2
+# colour250  #bcbcbc
+# colour251  #c6c6c6
+# colour252  #d0d0d0
+# colour253  #dadada
+# colour254  #e4e4e4
+# colour255  #eeeeee
