load rbenv, update delivery

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -150,8 +150,8 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # Images support
 # set -gq allow-passthrough on
-set -g default-terminal "wezterm"            # optional but helps TERM match
-set -ga terminal-overrides ",wezterm*:allow-passthrough"
+# set -g default-terminal "xterm-256color"
+# set -ga terminal-overrides ",wezterm*:allow-passthrough"
 set -g allow-passthrough on                  # use 'all' if you switch panes a lot
 set -gq allow-passthrough on
 set -g visual-activity off                   # keep your current line
