--- a/files/.config/tmux/tmux.conf
+++ b/files/.config/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # -- HotKeys --
 unbind C-b
 set -g prefix M-j
-bind r source-file ~/.tmux.conf \; display "config reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "config reloaded!"
 
 set -g status on
 
@@ -57,9 +57,6 @@ if-shell 'uname | grep -qi Darwin' 'set-option -g set-clipboard on' \
 
 # Modern terminal & mouse
 
-# set -g default-terminal "xterm-256color"
-# set -as terminal-overrides ",xterm-256color:Tc"
-
 # -- Gui
 set -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
@@ -88,11 +85,10 @@ set -g status-style "bg=default,fg=default"
 set -g status-left "[#S] 👾 "
 set -g status-left-length 50
 set -g status-right-length 0
-set -g status-right '#(~/.tmux/current_branch.sh "#{pane_current_path}")'
+set -g status-right '#(~/.config/scripts/git_current_branch.sh "#{pane_current_path}")'
 
 # -- status right
-
-# -- seprator
+# -- separator
 
 set -g window-status-separator ""
 
@@ -106,27 +102,17 @@ set-window-option -g window-status-current-format "⟨▣ #I:#W⟩"
 set-window-option -g window-status-style "bg=colour15,fg=colour0"
 set-window-option -g window-status-format "⟨▢ #I:#W⟩"
 
-set -g window-style          'bg=default,fg=white'   # use terminal bg
-set -g window-active-style   'bg=default,fg=black'
+set -g window-style          'bg=default,fg=white'
+# set -g window-active-style   'bg=default,fg=black'
 
 set -g automatic-rename off
 set -g allow-rename off
 
-# set -g @plugin 'tmux-plugins/tmux-urlview'
-# run '~/.tmux/plugins/tpm/tpm'
-# set -g @urlview-key 'x'
-
-# Switching sesions
+# Switching sessions
 
 set -g message-style "bg=colour15,fg=colour0"
 set -g mode-style "bg=colour15,fg=colour0,bold,reverse"
 
-# Plugins
-
-if-shell '[ ! -d ~/.tmux/plugins/tpm ]' \
-  'run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"'
-
-# Plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'lloydbond/tmux-floating-terminal'
@@ -138,57 +124,20 @@ set -g @floating_scratch_term 'M-i'
 set -g @floating_scratch_to_active_win 'M-h'
 set -g @floating_scratch_to_win 'M-l'
 set -g @floating_active_pane_to_scratch 'M-m'
-
-# Resurrect / Continuum
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '1'
-set -g status-interval 5
 
-run '~/.tmux/plugins/tpm/tpm'
+run '~/.config/tmux/tpm/tpm'
 
-# Images support
-# set -gq allow-passthrough on
-# set -g default-terminal "xterm-256color"
-# set -ga terminal-overrides ",wezterm*:allow-passthrough"
-set -g allow-passthrough on                  # use 'all' if you switch panes a lot
+set -g allow-passthrough on                  
 set -ga terminal-overrides ",wezterm:RGB"
 set -gq allow-passthrough on
-set -g visual-activity off                   # keep your current line
-
-# set -g status-style "bg=colour15,fg=colour0"
+set -g visual-activity off                  
 
 set -g status-style               'bg=colour254,fg=black'
-set -g window-status-style        'bg=colour254,fg=black'     # inactive tabs
-# set -g window-status-current-style 'bg=colour245,fg=colour255,bold' # active tab = darker gray
+set -g window-status-style        'bg=colour254,fg=black'
 
-
-# https://chatgpt.com/c/68b6c464-872c-832b-bdbb-fee2a1ce744f
-# - gray shades:
-# colour232  #080808
-# colour233  #121212
-# colour234  #1c1c1c
-# colour235  #262626
-# colour236  #303030
-# colour237  #3a3a3a
-# colour238  #444444
-# colour239  #4e4e4e
-# colour240  #585858
-# colour241  #626262
-# colour242  #6c6c6c
-
-# colour243  #767676
-# colour244  #808080
-# colour245  #8a8a8a
-# colour246  #949494
-# colour247  #9e9e9e
-# colour248  #a8a8a8
-# colour249  #b2b2b2
-# colour250  #bcbcbc
-# colour251  #c6c6c6
-# colour252  #d0d0d0
-# colour253  #dadada
-# colour254  #e4e4e4
-# colour255  #eeeeee
+source-file ~/.cache/wal/tmux.conf
