--- a/files/.config/i3/config
+++ b/files/.config/i3/config
@@ -1,14 +1,8 @@
 set $mod Mod4
 
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, if you need a lot of unicode glyphs or
-# right-to-left text rendering, you should instead use pango for rendering and
-# chose a FreeType font, such as:
 font pango:JetBrainsMonoNL Nerd Font Propo 10
 
 gaps inner 10
-gaps outer 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -18,28 +12,20 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+e exec thunar
 bindsym $mod+d exec dmenu_run
 
-# change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# split in horizontal orientation
 # bindsym $mod+h split h
-
-# split in vertical orientation
 bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
 
-# change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
@@ -52,8 +38,6 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
-
-# focus the child container
 #bindsym $mod+d focus child
 
 # switch to workspace
@@ -80,7 +64,6 @@ bindsym $mod+8 workspace $space8
 bindsym $mod+9 workspace $space9
 bindsym $mod+0 workspace $space0
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $space1 
 bindsym $mod+Shift+2 move container to workspace $space2
 bindsym $mod+Shift+3 move container to workspace $space3
@@ -92,39 +75,20 @@ bindsym $mod+Shift+8 move container to workspace $space8
 bindsym $mod+Shift+9 move container to workspace $space9
 bindsym $mod+Shift+0 move container to workspace $space0
 
-# reload the configuration file
 bindsym $mod+Shift+c reload
-
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-# TODO: exit i3 (logs you out of your X session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
 bindsym $mod+r mode "resize"
-
-# bar {
-#   status_command i3status
-#   position top
-# }
 
 # for_window [class="^.*"] border pixel 1
 default_border normal            
@@ -136,35 +100,26 @@ for_window [class=".*"] title_format ""
 # default_border pixel 2
 # default_floating_border pixel 2
 
-set $gray  #808080
-set $gray2 #A0A0A0
+# Set colors from Xresources
+# Change 'color7' and 'color2' to whatever colors you want i3 to use 
+# from the generated scheme.
+# The '#f0f0f0' in the lines below is the color i3 will use if it fails to get colors from Xresources.
+set_from_resource $fg i3wm.color7 #f0f0f0
+set_from_resource $bg i3wm.color2 #f0f0f0
 
-set $fg     #ECEFF4
-set $bg     #2E3440
-set $gray   #4C566A
-set $accent #88C0D0
-set $red    #BF616A
+# class                 border  backgr. text indicator child_border
+client.focused          $bg     $bg     $fg  $bg       $bg
+client.focused_inactive $bg     $bg     $fg  $bg       $bg
+client.unfocused        $bg     $bg     $fg  $bg       $bg
+client.urgent           $bg     $bg     $fg  $bg       $bg
+client.placeholder      $bg     $bg     $fg  $bg       $bg
 
-#                       border background text indicator child_border
-client.focused          $accent $accent $bg     $accent $accent
-client.focused_inactive $gray   $gray   $fg     $gray   $gray
-client.unfocused        $bg     $bg     $fg     $bg     $bg
-client.urgent           $red    $red    $bg     $red    $red
-client.placeholder      $bg     $bg     $fg     $bg     $bg
 client.background       $bg
-
-# new_window pixel 2
-# new_float pixel 2
 
 # exec --no-startup-id xscreensaver
 exec_always --no-startup-id picom -b
 exec_always --no-startup-id feh --bg-scale ~/code/dot-files/files/desktop/anime-water.jpg
 exec_always --no-startup-id ~/.config/polybar/launch.sh
-
-# NOTE: This two moved to ~/.xinitrc
-# exec_always --no-startup-id autorandr --change
-# exec --no-startup-id sxhkd -c ~/.config/sxhkd/sxhkdrc
-
+exec_always --no-startup-id wal -R
 
 exec --no-startup-id i3-msg 'workspace 1; split h; exec wezterm; focus right; exec firefox'
-exec --no-startup-id i3-msg 'workspace 3; split h; exec obsidian'
