--- a/files/.config/neofetch/config.conf
+++ b/files/.config/neofetch/config.conf
@@ -694,7 +694,8 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'pot', 'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="kitty"
+image_source="$HOME/.config/neofetch/logo.png"
 
 # Image Source
 #
@@ -826,7 +827,7 @@ crop_offset="center"
 # Values:  'auto', '00px', '00%', 'none'
 # Flags:   --image_size
 #          --size
-image_size="auto"
+image_size="30%"
 
 # Gap between image and text
 #
