--- a/files/.config/picom/picom.conf
+++ b/files/.config/picom/picom.conf
@@ -1,15 +1,23 @@
 backend = "glx";
 vsync = true;
-# invert-color-include = [ "TAG_INVERT@:8c = 1" ];
-invert-color-include = [ "_PICOM_INVERT@:32c = 1" ]
 shadow = false;
 fading = false;
+inactive-opacity-override = false;
+detect-client-opacity = true
+wintypes = {
+  dock = { shadow = false; };
+};
+# invert-color-include = [ "TAG_INVERT@:8c = 1" ];
+invert-color-include = [ "_PICOM_INVERT@:32c = 1" ]
 
 inactive-opacity = 0.9;
-frame-opacity = 1.0;
-inactive-opacity-override = false;
 
 corner-radius = 0;
-blur-method = "none";
-
 use-damage = true;
+
+blur: {
+  method = "dual_kawase";
+  strength = 5.25;
+  deviation = 1.0;
+  kernel = "11x11gaussian";
+}
