--- a/files/.config/tmux/tmux.conf
+++ b/files/.config/tmux/tmux.conf
@@ -1,117 +1,61 @@
 # -- HotKeys --
 unbind C-b
 set -g prefix M-j
-bind r source-file ~/.config/tmux/tmux.conf \; display "config reloaded!"
 
-set -g status on
-
-# -- Open Panes
+bind r   source-file ~/.config/tmux/tmux.conf \; display "config reloaded!"
 bind '%' split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+bind c   new-window -c "#{pane_current_path}"
+bind j   select-pane -D
+bind k   select-pane -U
+bind l   select-pane -L
+bind h   select-pane -R
+bind -r  Down resize-pane -D 10
+bind -r  Up resize-pane -U 10
+bind -r  Right resize-pane -R 10
+bind -r  Left resize-pane -L 10
 
-# ─── True 1-bit (no gray fallback) ───────────────────────
-# use ANSI colour0 (black) and colour15 (white) only
-set -g escape-time 0
+# clear styles
+set -g status-style "fg=default,bg=default,noreverse,nobold,nounderscore"
+set -g window-status-style "fg=default,bg=default,nodim,nobold,nounderscore"
+set -g window-status-current-style "fg=default,bg=default,noreverse,nobold,nounderscore"
 
-# ─── Disable bell/flags/noise ────────────────────────────
-set -g monitor-activity off
-setw -g window-status-activity-style none
-
-# Pane move
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -L
-bind h select-pane -R
-
-# Panes Resize
-bind -r Down resize-pane -D 10
-bind -r Up resize-pane -U 10
-bind -r Right resize-pane -R 10
-bind -r Left resize-pane -L 10
-
-# -- HotKeys --
-
-# -- Copy paste --
-# set -g allow-paste on 
-set -g mouse on # enable mouse support
-setw -g mode-keys vi # use vim-style nav in copy mode
-
-# Clipboard copy logic
 if-shell 'uname | grep -qi Darwin' 'set-option -g set-clipboard on' \
 'if-shell "uname -r | grep -qi microsoft" \
   "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"win32yank.exe -i --crlf\"" \
   "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"xclip -sel clip -i\""
 '
 
-# set-option -g set-clipboard on # enable OSC 52 to system clipboard
-
-# bind -T copy-mode-vi y send -X copy-selection-and-cancel  # y to yank in copy mode (sends to system clipboard via OSC 52)
-
-# fallback key: prefix + y to copy last selected text to clipboard
-# copy - zsh function that uses different api based on the machine
-# bind-key y run-shell "tmux show-buffer | tmux load-buffer - && tmux save-buffer - | copy"
-
-# set -g terminal-features 'wezterm:RGB,paste:bracketed'
-# set -as terminal-features ',xterm-256color:RGB'
-
-# Modern terminal & mouse
-
-# -- Gui
+set -g status on
+set -g automatic-rename off
+set -g allow-rename off
+set -g mouse on 
+setw -g mode-keys vi
 set -g default-shell /bin/zsh
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -as terminal-features "tmux*:RGB,tmux*:usstyle"
 set -sg escape-time 0
 set -g focus-events on
 set -g exit-unattached off
-
-# -- Tabs
-
-# Indexing starts at 1
 set -g base-index 1
 set -g pane-base-index 1
-
-# -- Status bar style
 set -g status-interval 5
 set -g status-position top
 set -g status-left-length 50
 set -g status-right-length 50
 set -g status-justify left
-set -g status-bg default
-set -g status-fg default
-set -g status-style "bg=default,fg=default"
-# -- status left
 
+# -- status left
 set -g status-left "[#S] 👾 "
 set -g status-left-length 50
 set -g status-right-length 0
 set -g status-right '#(~/.config/scripts/git_current_branch.sh "#{pane_current_path}")'
 
 # -- status right
-# -- separator
-
 set -g window-status-separator ""
-
-# -- Active tab 
-set -g status-style bg=default
-
-set-window-option -g window-status-current-style "bg=colour15,fg=colour0,bold"
 set-window-option -g window-status-current-format "⟨▣ #I:#W⟩"
-
-# -- Inactive tab (bright)
-set-window-option -g window-status-style "bg=colour15,fg=colour0"
 set-window-option -g window-status-format "⟨▢ #I:#W⟩"
 
-set -g window-style          'bg=default,fg=white'
-# set -g window-active-style   'bg=default,fg=black'
-
-set -g automatic-rename off
-set -g allow-rename off
-
-# Switching sessions
-
-set -g message-style "bg=colour15,fg=colour0"
-set -g mode-style "bg=colour15,fg=colour0,bold,reverse"
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
@@ -137,7 +81,4 @@ set -ga terminal-overrides ",wezterm:RGB"
 set -gq allow-passthrough on
 set -g visual-activity off                  
 
-set -g status-style               'bg=colour254,fg=black'
-set -g window-status-style        'bg=colour254,fg=black'
-
-source-file ~/.cache/wal/tmux.conf
+# source-file ~/.cache/wal/tmux.conf
