--- a/files/.config/polybar/config.ini
+++ b/files/.config/polybar/config.ini
@@ -1,25 +1,59 @@
-# This config is based on https://github.com/hrqmonteiro/i3
+# Props to https://github.com/hrqmonteiro/i3 for the foundation
+
+include-directory = ~/.config/polybar/modules
+
 [colors]
-background = ${xrdb:color0:#222}
-background-alt = #444
-;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #FFF
-secondary = #B2535B
-alert = #B2535B
+include-file = ~/.cache/wal/colors-polybar
 
 [settings]
 screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+pseudo-transparency = false
 
 [global/wm]
 margin-top = 5
 margin-bottom = 5
 
-include-directory = ~/.config/polybar/config.d/modules
-include-file = ~/.config/polybar/config.d/bottom_bar.ini
-include-file = ~/.config/polybar/config.d/top_bar.ini
+
+[bar/base]
+background = #00000000
+font-0            = "JetBrainsMonoNL Nerd Font:style=Regular:size=15:antialias=true;3"
+line-size         = 3
+; line-color        = #f00
+border-size       = 4
+; border-color      = #00000000
+width             = 100%
+height            = 40
+offset-y          = 0
+offset-x          = 0
+border-right-size = 10
+border-left-size  = 10
+
+radius              = 0.5
+fixed-center        = true
+padding-left        = 0
+padding-right       = 2
+module-margin-left  = 1
+module-margin-right = 2
+
+[bar/top_bar]
+inherit            = bar/base
+modules-left       = powermenu  pulseaudio eth 
+modules-center     = 
+modules-right      = date
+bottom             = false
+border-top-size    = 10
+border-bottom-size = 0
+wm-restack         = i3
+scroll-up          = i3wm-wsnext
+scroll-down        = i3wm-wsprev
+cursor-click       = pointer
+cursor-scroll      = ns-resize
+
+[bar/bottom_bar]
+inherit            = bar/base
+bottom             = true
+border-top-size    = 0
+border-bottom-size = 10
+modules-left       = i3
+modules-center     = 
+modules-right      = cpu gpu_nv input_source
