--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,3 +33,7 @@
     ~/.config/wezterm: config/wezterm
     ~/.config/zsh: config/zsh
     ~/.config/wal: config/wal
+
+
+    # SystemD
+    ~/.config/systemd/user/sxhkd.service.wants: config/systemd/user/sxhkd.service.wants
