--- a/.gitmodules
+++ b/.gitmodules
@@ -1,20 +1,9 @@
-[submodule "files/.zsh/base16-shell"]
-	path = files/.zsh/base16-shell
-	url = https://github.com/chriskempson/base16-shell.git
-
-[submodule "files/.tmux/plugins/tpm"]
-	path = files/.tmux/plugins/tpm
+[submodule "config/tmux/tpm"]
+	path = config/tmux/tpm
 	url = https://github.com/tmux-plugins/tpm.git
-
-[submodule "files/.zsh/zsh-autosuggestions"]
-	path = files/.zsh/zsh-autosuggestions
-	url = https://github.com/zsh-users/zsh-autosuggestions.git
 [submodule "dependencies/dotbot"]
 	path = dependencies/dotbot
 	url = https://github.com/anishathalye/dotbot
 [submodule "dependencies/lazy.nvim"]
 	path = dependencies/lazy.nvim
 	url = https://github.com/folke/lazy.nvim
-[submodule "files/.config/tmux/tpm"]
-	path = files/.config/tmux/tpm
-	url = https://github.com/tmux-plugins/tpm
