--- a/deliver/dotbot-config/mac.conf.yaml
+++ b/deliver/dotbot-config/mac.conf.yaml
@@ -7,11 +7,11 @@
 
 # Work in progress
 # - link:
-#     ~/.config/alacritty: config/alacritty
-#     ~/.config/kitty: config/kitty
-#     ~/.config/wezterm: config/wezterm
-#     ~/.config/zsh: config/zsh
-#     ~/.config/tmux: config/tmux
-#     ~/.config/nvim: config/nvim
-#     ~/.config/scripts: config/scripts
-#     ~/.zprofile: zprofile/.zprofile
+#     ~/.config/alacritty: ../../config/alacritty
+#     ~/.config/kitty: ../../config/kitty
+#     ~/.config/wezterm: ../../config/wezterm
+#     ~/.config/zsh: ../../config/zsh
+#     ~/.config/tmux: ../../config/tmux
+#     ~/.config/nvim: ../../config/nvim
+#     ~/.config/scripts: ../../config/scripts
+#     ~/.zprofile: ../../zprofile/.zprofile
