[NixOS] Fix zsh environement

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,14 +5,16 @@ bold_font        JetBrainsMonoNL Nerd Font Mono ExtraBold
 italic_font      JetBrainsMonoNL Nerd Font Mono Italic
 bold_italic_font JetBrainsMonoNL Nerd Font Mono Bold Italic
 
+
 # adjust_line_height -1
 # adjust_column_height 2
-font_size        17
+font_size        11
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 # font_size_delta 1
 
-shell /bin/zsh --login
+shell ${SHELL} -l
+
 # Adjust the line height. 
 # You can use either numbers, which are interpreted as pixels or percentages
 # (number followed by %), which are interpreted as percentages of the
@@ -154,34 +156,6 @@ inactive_tab_foreground #444
 inactive_tab_background #999
 
 
-# The 16 terminal colors. There are 8 basic colors, each color has a dull and
-# bright version.
-
-color0   #0a0f14
-color8   #10151b
-
-color1   #c33027
-color9   #d26939
-
-color2   #26a98b
-color10  #081f2d
-
-color3   #edb54b
-color11  #245361
-
-color4   #195465
-color12  #093748
-
-color5   #4e5165
-color13  #888ba5
-
-color6   #33859d
-color14  #599caa
-
-color7   #98d1ce
-color15  #d3ebe9
-
-
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
 # For a list of modifier names, see: http://www.glfw.org/docs/latest/group__mods.html
@@ -311,7 +285,7 @@ macos_hide_titlebar no
 # can use the macOS unicode input technique.
 macos_option_as_alt yes
 
-background #ffffff
-foreground #000000
-
 # tab_bar_style hidden
+
+
+include ~/.cache/wal/colors-kitty.conf
