--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -31,7 +31,7 @@ set -g automatic-rename off
 set -g allow-rename off
 set -g mouse on 
 setw -g mode-keys vi
-set -g default-shell /bin/zsh
+set -g default-shell ${SHELL}
 set -g default-terminal "screen-256color"
 set -as terminal-features "tmux*:RGB,tmux*:usstyle"
 set -sg escape-time 0
