[dotbot] attempt to fix delivery path

--- a/deliver/dotbot-config/linux_common.conf.yaml
+++ b/deliver/dotbot-config/linux_common.conf.yaml
@@ -1,15 +1,15 @@
 - defaults:
-    link:
-      create: true
-      relink: true
-      force: true   # uncomment if you want to overwrite non-symlinks
+  link:
+    create: true
+    relink: true
+    force: true
 
 
 - link:
-    ~/.config/alacritty: ../../config/alacritty
-    ~/.config/kitty: ../../config/kitty
-    ~/.config/wezterm: ../../config/wezterm
-    ~/.config/zsh: ../../config/zsh
-    ~/.config/tmux: ../../config/tmux
-    ~/.config/nvim: ../../config/nvim
-    ~/.config/scripts: ../../config/scripts
+  ~/.config/alacritty: ../../config/alacritty
+  ~/.config/kitty: ../../config/kitty
+  ~/.config/wezterm: ../../config/wezterm
+  ~/.config/zsh: ../../config/zsh
+  ~/.config/tmux: ../../config/tmux
+  ~/.config/nvim: ../../config/nvim
+  ~/.config/scripts: ../../config/scripts
