--- a/deliver/dotbot-config/linux_hyprland.conf.yaml
+++ b/deliver/dotbot-config/linux_hyprland.conf.yaml
@@ -1,13 +1,12 @@
 - defaults:
-    link:
-      create: true
-      relink: true
-      force: true   # uncomment if you want to overwrite non-symlinks
+  link:
+    create: true
+    relink: true
+    force: true
 
 
 - link:
-    ~/.config/autorandr: config/autorandr
-
-    # ~/.xinitrc: ../../xinitrc/.xinitrc
-    ~/.zprofile: ../../zprofile/.zprofile
-    # ~/.xprofile: ../../xprofile/.xprofile
+  ~/.zprofile: ../../zprofile/.zprofile
+  ~/.config/deployed:
+    path: ../../config/deployed
+    create: true
