--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,14 +8,14 @@ bold_italic_font JetBrainsMonoNL Nerd Font Mono Bold Italic
 
 # adjust_line_height -1
 # adjust_column_height 2
-font_size        11
+font_size        10
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 # font_size_delta 1
 
 shell ${SHELL} -l
 
-# Adjust the line height. 
+# Adjust the line height.
 # You can use either numbers, which are interpreted as pixels or percentages
 # (number followed by %), which are interpreted as percentages of the
 # unmodified line height. You can use negative pixels or percentages less than
@@ -43,9 +43,10 @@ sync_to_monitor yes
 
 # The cursor shape can be one of (block, beam, underline)
 cursor_shape     beam
+confirm_os_window_close 0
 
 # The interval (in seconds) at which to blink the cursor. Set to zero to
-# disable blinking. Note that numbers smaller than repaint_delay will be 
+# disable blinking. Note that numbers smaller than repaint_delay will be
 # limited to repaint_delay.
 cursor_blink_interval     0.5
 
@@ -72,7 +73,7 @@ wheel_scroll_multiplier 5.0
 click_interval 0.5
 
 # Characters considered part of a word when double clicking. In addition to these characters
-# any character that is marked as an alpha-numeric character in the unicode
+# any character that is marked as an alphanumeric character in the unicode
 # database will be matched.
 select_by_word_characters :@-./_~?&=%+#
 
@@ -159,10 +160,10 @@ inactive_tab_background #999
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
 # For a list of modifier names, see: http://www.glfw.org/docs/latest/group__mods.html
-# 
+#
 # You can use the special action no_op to unmap a keyboard shortcut that is
 # assigned in the default configuration.
-# 
+#
 # You can combine multiple actions to be triggered by a single shortcut, using the
 # syntax below:
 # map key combine <separator> action1 <separator> action2 <separator> action3 ...
@@ -181,7 +182,7 @@ map alt+right send_text all \x1b\x66
 # pass_selection_to_program. By default, the system's open program is used, but
 # you can specify your own, for example:
 # map ctrl+shift+o      pass_selection_to_program firefox
-map ctrl+shift+o        pass_selection_to_program 
+map ctrl+shift+o        pass_selection_to_program
 
 # Scrolling
 map ctrl+shift+up        scroll_line_up
@@ -195,7 +196,7 @@ map ctrl+shift+end       scroll_end
 map ctrl+shift+h         show_scrollback
 
 # Window management
-map ctrl+shift+enter    new_window 
+map ctrl+shift+enter    new_window
 map ctrl+shift+w        close_window
 map ctrl+shift+]        next_window
 map ctrl+shift+[        previous_window
@@ -266,11 +267,11 @@ map ctrl+shift+f11      toggle_fullscreen
 # in hexadecimal>. You can specify multiple code points, separated by commas
 # and ranges separated by hyphens. symbol_map itself can be specified multiple times.
 # Syntax is:
-# 
+#
 # symbol_map codepoints Font Family Name
-# 
+#
 # For example:
-# 
+#
 # symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 PowerlineSymbols
 
 
@@ -279,7 +280,7 @@ map ctrl+shift+f11      toggle_fullscreen
 # Hide the kitty window's title bar on macOS.
 macos_hide_titlebar no
 
-# Use the option key as an alt key. With this set to no, kitty will use 
+# Use the option key as an alt key. With this set to no, kitty will use
 # the macOS native Option+Key = unicode character behavior. This will
 # break any Alt+key keyboard shortcuts in your terminal programs, but you
 # can use the macOS unicode input technique.
